<resources>
    <string name="app_name">MoodTracker</string>
    <string name="great_mood">Great moodType</string>
    <string name="mood_history">Mood History</string>
    <string name="note_description">Note Description</string>
    <string name="one_week_ago">One Week Ago</string>
    <string name="six_days_ago">Six Days Ago</string>
    <string name="five_days_ago">Five Days Ago</string>
    <string name="four_days_ago">Four Days Ago</string>
    <string name="three_days_ago">Three Days Ago</string>
    <string name="two_days_ago">Two Days Ago</string>
    <string name="yesterday">Yesterday</string>
    <string name="comment">Comment</string>
    <string name="comment_hint">Add your note</string>
    <string name="add_note">Add Note</string>
    <string name="cancel">CANCEL</string>
</resources>
